# falcon-det

./: .git-blame-ignore-revs  .gitattributes  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: aux.rs  det1024.rs  error.rs  lib.rs  shake256.rs  tests.rs
src/tests/: test_deterministic_kat.rs
sys/: Cargo.toml  README.md  build.rs
sys/falcon/: .gitignore  CMakeLists.txt  LICENSE
sys/falcon/include/: falcon_det.h
sys/falcon/src/: deterministic.c
sys/falcon/tests/: test_deterministic.c
sys/src/: lib.rs
